# SFML-Engine-

./: CMakeLists.txt  Engine.cbp  Engine.depend  Engine.layout  README.md  makefile
inc/: Config.h  Game.h  MenuState.h  ResourceManager.h  State.h  StateManager.h
include/: Collision.h  Config.h  Game.h  MenuState.h  RandomValues.h  ResourceManager.h  State.h  StateManager.h
src/: Collision.cpp  Config.cpp  Game.cpp  MenuState.cpp  RandomValues.cpp  ResourceManager.cpp  State.cpp  StateManager.cpp
